--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@
 #hero h2 {
     margin: 0;
     font-size: 24px;
-    color: #ffffffbb;
+    color: #ffffffe3;
     font-family: "Poppins", sans-serif;
     text-align: center;
     margin-top: 15px;
@@ -125,7 +125,9 @@
 .history p {
     text-align: center;
 }
-
+.services {
+    background-color: rgba(255, 255, 255, 0.664);
+}
 .services p {
     font-size: 20px;
     color: #3a3a3a;
@@ -187,9 +189,15 @@ footer .logo {
 .footer-top .footer-info {
     margin-bottom: 30px;
 }
-
+.footer-info .footer-link {
+    color: rgb(74, 102, 231);
+    text-decoration: none;
+    transition: 0.3s all ease-in-out;
+    margin-bottom: 15px;
+}
 .footer-info .footer-link:hover {
     color: #000000;
     background-color: #fff;
     text-decoration: none;
+    border-radius: 5px;
 }
