--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,13 @@
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
+   
 }
+
 #hero .logo {
     width: 150px;
     margin: 0 auto;
+    border-radius: 50%;
 }
 
 .about li {
@@ -79,6 +82,7 @@
     text-align: center;
     color: #ffffff;
 }
+
 .about2 h3{
     padding-bottom: 25px;
     font-size: 28px;
@@ -90,6 +94,7 @@
 .about2-ul {
     padding-left: 0px;
 }
+
 .about2 li {
     list-style-type: none;
 }
@@ -122,6 +127,9 @@
     margin-right: 10px;
 }
 
+.itf-logo{
+    border-radius: 50%;
+}
 .history p {
     text-align: center;
 }
@@ -184,6 +192,7 @@
 footer .logo {
     width: 150px;
     margin: 0 auto;
+    border-radius: 50%;
 }
 
 .footer-top .footer-info {
