--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,7 @@ footer .logo {
     text-decoration: none;
     transition: 0.3s all ease-in-out;
     margin-bottom: 15px;
+    font-size: 16px;
 }
 .footer-info .footer-link:hover {
     color: #000000;
@@ -215,12 +216,12 @@ footer .logo {
     margin-bottom: 0px;
     font-size: 12px;
     color: #83838393;
-    text-decoration: none;
+   
 }
 .footer-top a{
     margin-bottom: 0px;
     font-size: 12px;
-    color: #83838393;
+    color: #83838381;
     text-decoration: none;
 }
 
