--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@
     background: linear-gradient(rgba(2,2,2,0.5), rgba(2,2,2,0.8)), url(https://sun9-69.userapi.com/impf/EnneS4emMGJyCiPSSP5uEVVqer3NxR-fVzfQPw/a3Ev3Hs96Yc.jpg?size=0x0&quality=90&proxy=1&sign=3cc49f50081e6e59464bf550d2076253) fixed center center;
     padding: 60px 0;
     background-size: cover;
-    text-align: center;
+    text-align: left;
     color: #ffffff;
 }
 
@@ -88,6 +88,7 @@
     padding-bottom: 25px;
     font-size: 28px;
     font-weight: 700;
+    text-align: center;
 }
 .about2 ul{
     font-size: 24px;
@@ -95,7 +96,10 @@
 .about2-ul {
     padding-left: 0px;
 }
-
+.ul-about2 {
+    display: flex;
+    justify-content: center;
+}
 .about2 li {
     list-style-type: none;
 }
@@ -181,7 +185,10 @@
     margin-bottom: 10px;
     margin-right: 10px;
 }
-
+.container2 {
+    display: flex;
+    justify-content: center;
+}
 .itf-logo{
     border-radius: 50%;
 }
@@ -212,13 +219,13 @@
 }
 .services .icon-box p {
     line-height: 24px;
-    font-size: 14px;
+    font-size: 18px;
     margin-bottom: 0;
 }
 .services .icon-box .text-center {
     margin-top: 10px;
-    background-color: white;
-    color: black;
+    
+    color: rgb(255, 255, 255);
     border-radius: 5px;
     opacity: 0;
     transition: ease all 0.2s;
@@ -228,11 +235,11 @@
 }
 
 .services .icon-box:hover {
-    background: linear-gradient(rgba(2,2,2,0.5), rgba(2,2,2,0.8)), url(../img/partner.jpg) center;
+    background: linear-gradient(rgba(2, 2, 2, 0.705), rgba(2, 2, 2, 0.973)), url(../img/partner.jpg) center;
     background-size: cover;
     border-color: #afafaf;
     box-shadow: 0 0 25px 0 rgba(0,0,0,0.5);
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.507);
     transform: translateY(-10px);
 }
 
@@ -328,7 +335,9 @@ footer .logo {
     #instructors .row p {
         font-size: 15px;
     }
-    
+    .about2 ul{
+        font-size: 16px;
+    }
  }
 
 
